tdf#101841 MM correctly account record selections

Don't reset the pParam->xResultSet for selections when querying
the result count. This actually resets the selection.

 * MM just increment after a successful next record

This correctly counts the record id from 1, while using 0
for the first item in the selection array.

(cherry picked from commit 178a23a827f16e046e5d5efb2aa2aa3fc990452a)

 * MM account next record fields for progress dialog

When calculating the maximum document count, we were not accounting
"next record" fields in the document, like in labels etc.

Also any selection of records was ignored.

Fixes accounting part of tdf#101841.

(cherry picked from commit 260cd3aeea2d02507dd131ee2028c4f48f7562f8)

Change-Id: I458e9e2e1af122f8324bcd873fd35ffcf89d62d3